--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h2 id="know-who-we-are">Know Who We Are</h2>
 <ul>
 <li><strong><a href="https://www.linkedin.com/in/mostafamorsy2/">Kofta</a></strong></li>
-<li><strong>Rana MKK</strong></li>
+<li><strong><a href="https://www.linkedin.com/in/rana-mkk-0380741bb/">Rana MKK</a></strong></li>
 <li><strong><a href="https://www.linkedin.com/in/youssef-morad/">Youssef Morad</a></strong></li>
 <li><strong><a href="https://www.linkedin.com/in/nour-eldin-ahmed-2166a1231/">Nour Eldin Ahmed</a></strong></li>
 <li><strong><a href="https://www.linkedin.com/in/kariem-gamal-295674229/">Kareem Gamal</a></strong></li>
@@ -69,7 +69,21 @@
 <td>-</td>
 </tr>
 </tbody>
-</table><h2 id="additional-links">Additional Links</h2>
+</table><h2 id="faq">FAQ</h2>
+<h4 id="q-how-will-we-apply-on-what-has-been-explained-during-the-sessions">Q: How will we apply on what has been explained during the sessions?</h4>
+<p>A: We will work hard on providing problem sets and online sheets for you to solve after each session.</p>
+<h4 id="q-are-the-sessions-and-resources-provided-enough">Q: Are the sessions and resources provided enough?</h4>
+<p>A: This depends on how far you want to go with learning C++. The sessions will help you master using C++ but there’s always room for more and it’s never enough. Learning more about a programming language always helps you grasp the concepts of how everything works behind the scenes.</p>
+<h4 id="q-will-you-record-the-sessions">Q: Will you record the sessions?</h4>
+<p>A: The sessions will be recorded and uploaded on this <a href="https://drive.google.com/drive/folders/138R2Wn7PXo74UtG8etHneiiyGsCKM631?usp=drive_link">GDrive Folder</a>.</p>
+<h4 id="q-how-frequent-and-how-long-will-the-sessions-be">Q: How frequent and how long will the sessions be?</h4>
+<p>A: We’re hoping to have a session every couple of days, and each will be around 2 hours long.</p>
+<h4 id="q-do-i-still-have-a-chance-to-catch-up-given-i-know-nothing-about-c">Q: Do I still have a chance to catch up given I know nothing about C++?</h4>
+<p>A: You’re in the right place! This course (Structured Programming) aims to take you from zero to hero, you aren’t supposed to have any previous C++ knowledge.</p>
+<h4 id="q-do-i-have-to-own-a-laptop-to-benefit-from-the-sessions">Q: Do I have to own a laptop to benefit from the sessions?</h4>
+<p>A: Not at all! During our introductory session we’ll provide you with multiple alternatives that will provide a near experience to that you’ll get on a laptop.</p>
+<h4 id="q-how-much-does-this-journey-cost">Q: How much does this journey cost?</h4>
+<p>A: Nothing! It’s 100% free. Make sure that we will never ever charge you a penny for any of the services that we provide.</p>
 </div>
 </body>
 
