--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 <td>29/02/2024</td>
 <td>- <strong>Why we are here</strong> (Overview, What we’ll try to provide, Content to be covered)<br>- <strong>Algorithmic problem Solving</strong> (Different examples and problems)</td>
 <td>- Kofta<br>- Rana<br>- Nour Eldin</td>
-<td>-</td>
+<td>- <a href="https://drive.google.com/file/d/19ZlI_eYrNLhZytIXCiumwhAQlQhV8p_x/view?usp=drive_link">session 1 recording</a></td>
 </tr>
 <tr>
 <td>02/03/2024</td>
 <td>- <strong>Structured programming</strong> (Divide and conquer, solution breakdown, functions)<br>- <strong>Introduction</strong> (Introduction, computer organization, programming languages)</td>
 <td>- Nour Eldin<br>- Ahmed Hany</td>
-<td>-</td>
+<td>- <a href="https://drive.google.com/file/d/1JwRxK9rqX4mxtJwNdgzaL_sTiItqFhbw/view?usp=drive_link">session 2 recording</a></td>
 </tr>
 <tr>
 <td>04/03/2024</td>
